[package]
name = "Monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.18.0"
futures = "0.3.26"

lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.1"