[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlca

[dependencies]
axum = { version = "0.6.4", features = ["headers", "ws", "json"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
# logging(option)
log = "0.4"
fast_log = "1.5"
# serde/rbs (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
# choose one rbdc drivier
rbdc-sqlite = { version = "0.1" }
rbdc-pg = { version = "0.1" }
lazy_static = "1.4.0"
toml = "0.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
futures = "0.3.26"
#tower-http = { version = "0.3.5", features = ["trace"] }
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
pyo3 = { version = "0.18.0", features = ["auto-initialize"] }